--- a/petpick-frontend/src/assets/styles.css
+++ b/petpick-frontend/src/assets/styles.css
@@ -29,7 +29,7 @@ header .carousel-item img {
 }
 
 .navbar-light .nav-link:hover {
-    color: #c48b5f;
+    color: #4e4e4e;
 }
 
 .navbar-nav .btn {
